...
        <item>fl oz</item>
        <item>pinch</item>
        <item>heap</item>
    </string-array>

    <string-array name="tags_time_of_day">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>All Day</item>
    </string-array>

    <string-array name="tags_course">
        <item>Snack</item>
        <item>Appetizer</item>
        <item>Entree</item>
        <item>Dessert</item>
    </string-array>

    <string-array name="tags_type">
        <item>Pastry</item>
        <item>Culinary</item>
    </string-array>

    <string-array name="tags_taste">
        <item>Sweet</item>
        <item>Savory</item>
    </string-array>

    <string-array name="tags_diet">
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Pescatarian</item>
        <item>Mediterranean</item>
        <item>Keto</item>
        <item>Paleo</item>
        <item>Gluten-Free</item>
    </string-array>

    <string-array name="tags_region">
        <item>Western</item>
        <item>Middle Eastern</item>
        <item>West Asian</item>
        <item>East Asian</item>
        <item>European</item>
        <item>African</item>
        <item>Caribbean</item>
        <item>Fusion</item>
    </string-array>

    <string-array name="tags_occasion">
        <item>New Year\'s Eve</item>
        <item>Easter</item>
        <item>Halloween</item>
        <item>Thanksgiving</item>
        <item>Christmas</item>
        <item>Cultural</item>
        <item>Romantic</item>
        <item>Birthday</item>
    </string-array>

    <string-array name="tags_season">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn/Fall</item>
        <item>All Year</item>
    </string-array>

    <string-array name="difficulty_dropdown">
        <item>Easy</item>
        <item>Moderate</item>
        <item>Challenging</item>
...
