<resources>
    <!-- Activity-Related -->
    <string name="app_name">Cookit</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_new_recipe">Submit New Recipe</string>
    <string name="title_activity_tagged_list">Recipes tagged as \'%s\'</string>
    <string name="title_activity_favorite_list">Favorite List</string>

    <!-- Recipe-Related -->
    <string name="recipes">Recipes</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_section">Recipe Information</string>
    <string name="view_recipes">View Recipes</string>
    <string name="new_recipe">Publish New Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="serving_size">Serving Size</string>
    <string name="serving_size_select">Multiply serving amount: </string>
    <string name="creates_servings">Creates %d servings</string>
    <string name="prep_time">Prep Time</string>
    <string name="cook_time">Cook Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="attach_photo">Attach Photos</string>
    <string name="add_photos">Add Photos</string>
    <string name="reselect_photos">Reselect Photos</string>
    <string name="zero_photo_count">(0 photo(s) selected)</string>=
    <string name="selected_photo_count">(%d photo(s) selected)</string>
    <string name="prep_time_display">Prep Time: %d minutes</string>
    <string name="cook_time_display">Cook Time: %d minutes</string>
    <string name="difficulty_display">Difficulty: %s</string>

    <!-- Recipe Submission Errors -->
    <string name="recipe_error_provide_name">You must provide a name for the recipe</string>
    <string name="recipe_error_provide_author">You must provide an author</string>
    <string name="recipe_error_provide_serving_size">You must provide a serving size</string>
    <string name="recipe_error_provide_directions">You must give directions for the recipe</string>
    <string name="recipe_error_provide_ingredients">You must add at least one (1) ingredient</string>
    <string name="recipe_error_provide_prep_time">You must specify the prep time</string>
    <string name="recipe_error_provide_cook_time">You must specify the cook time</string>
    <string name="recipe_error_provide_difficulty">You must indicate the difficulty level of the recipe</string>
    <string name="recipe_error_provide_ingredient_name">You must provide an ingredient</string>
    <string name="recipe_error_provide_ingredient_qty">You must provide one or both of a whole number and/or a fraction</string>
    <string name="recipe_error_provide_ingredient_unit">You must provide a unit of measurement</string>

    <!-- Hints -->
    <string name="time_hint">(in minutes)</string>
    <string name="optional_hint">(optional)</string>

    <!-- Ingredient-Related -->
    <string name="ingredients">Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredients_tip">To add ingredients to the list, fill in the fields below and click \"Add Ingredient\"</string>
    <string name="ingredients_format">Use the fields above to add ingredients to this list</string>
    <string name="ingredients_list">Ingredient List</string>
    <string name="ingredient_format">%1$s %2$s %3$s</string>
    <string name="ingredient_format_no_unit">%1$s %2$s</string>
    <string name="add_ingredient">Add Ingredient</string>

    <!-- Measurement-Related -->
    <string name="measurement">Measurement</string>
    <string name="measurements">Measurements</string>
    <string name="measurement_units">Units</string>
    <string name="amount">Amount</string>
    <string name="amount_whole">Whole</string>
    <string name="amount_whole_hint">e.g. 2</string>
    <string name="amount_fraction">Fraction</string>
    <string name="not_applicable">N/A</string>

    <!-- Direction-Related -->
    <string name="directions">Directions</string>
    <string name="directions_format">Direction List</string>
    <string name="directions_hint">e.g.\n1. Mix all ingredients in a bowl\n2. Transfer to a baking pan... etc.</string>

    <!-- Author-Related -->
    <string name="authors">Authors</string>
    <string name="author">Author</string>
    <string name="add_author">Add Author</string>
    <string name="written_by">Written by %s</string>

    <!-- Review-Related -->
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="write_review">Review</string>
    <string name="review_count">%d ratings</string>
    <string name="reviews_none_submitted">(No reviews have been submitted yet, you can be the first!)</string>
    <string name="review_header">Leave a Review</string>
    <string name="review_content_hint">What did you like or dislike? What did you use this recipe for?</string>
    <string name="review_author_hint">Your Name</string>
    <string name="submit_review">Submit</string>
    <string name="review_submitted">Review submitted.</string>
    <string name="review_error_empty_content">Please include a comment with your review.</string>
    <string name="review_error_empty_author">Please include your name with your review.</string>
    <string name="review_error_invalid_rating">Please rate the recipe between 1 and 5 stars.</string>

    <!-- Tag-Related -->
    <string name="tags">Tags</string>
    <string name="tags_optional">Attach Tags (Optional)</string>
    <string name="tags_time_of_day">Time of Day</string>
    <string name="tags_type">Type</string>
    <string name="tags_taste">Taste</string>
    <string name="tags_course">Course</string>
    <string name="tags_diet">Diet</string>
    <string name="tags_region">Region</string>
    <string name="tags_occasion">Occasion</string>
    <string name="tags_season">Season</string>
    <string name="tags_suggestion">Suggested Tags</string>
    <string name="tags_no_recipes">There are currently no recipes with this tag.</string>
    <string name="tags_none_attached">(no tags have been attached)</string>

    <!-- System-Related -->
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="publish">Publish</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="see_all">See All</string>

    <!-- Favorite-Related -->
    <string name="favorited">Added to favorites</string>
    <string name="defavorited">Favorite has been deleted</string>

    <!-- Misc -->
    <string name="loremIpsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pellentesque metus vel sem sodales, vel imperdiet est lobortis. Sed viverra euismod ante nec euismod. Cras pulvinar posuere erat a consectetur. Vivamus ipsum arcu, ornare a ligula sed, tempor feugiat arcu. Curabitur vel velit et tortor luctus porttitor. Aliquam posuere sagittis tortor ac mollis. Quisque in tellus urna. Vivamus aliquam accumsan nunc eu vulputate. In semper in mauris eu molestie. Curabitur semper augue in nulla aliquam, eget iaculis sapien facilisis. Maecenas condimentum lorem nec nunc dapibus, et pellentesque purus tristique. Nullam consectetur et leo quis sodales.
    </string>
    <string name="submission_error">There were errors with your submission, please review the fields for details.</string>
</resources>
